# neo4j-test

./: AGENTS.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_VIOLATIONS_BEFORE_AFTER.md  README.md  pyproject.toml
docker/: docker-compose.yml
src/: app.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py
src/application/: app.py
src/application/addresses/: __init__.py  address_context.py  address_create_command.py  address_create_port.py  address_create_service.py  address_query_service.py  address_read_port.py  address_write_port.py
src/application/context/: application_context.py
src/application/infrastructure/: validation.py
src/application/port/: __init__.py
src/bootstrap/: application.py  application_context.py  application_repositories.py  application_runtime.py
src/databasemanagement/: drop_database.py
src/domain/: __init__.py
src/domain/addresses/: __init__.py
src/domain/ports/: __init__.py
src/domain/shared/: __init__.py  validation.py
src/infrastructure/: __init__.py  validation.py
src/infrastructure/bootstrap/: application.py  application_context.py  http_api.py  (+3 more)
tests/: __init__.py  test_address_create_request_mapper.py  test_address_create_service.py  test_address_http_api.py  test_address_http_controller.py  test_address_query_service.py  test_neo4j_address_mapper.py  test_neo4j_address_read_adapter.py  test_neo4j_address_repository.py  test_neo4j_address_write_adapter.py  test_neo4j_connection_factory.py  test_neo4j_repository_adapter.py  test_neo4j_repository_executor.py  test_neo4j_repository_package.py
(+127 files in other folders)
